--- a/面试/100道前端优质面试题/7.分析和解决问题思路.md
+++ b/面试/100道前端优质面试题/7.分析和解决问题思路.md
@@ -1,6 +1,6 @@
-# 数组转树
+# 1.数组转树
 
-## 题目
+## 1.1题目
 
 定义一个 `convert` 函数，将以下数组转换为树结构。
 
@@ -17,7 +17,7 @@ const arr = [
 
 ![](img/部门-树.png)
 
-## 分析
+## 1.2分析
 
 定义树节点的数据结构
 
@@ -34,20 +34,70 @@ interface ITreeNode {
 - 生成 tree node
 - 找到 parentNode 并加入到它的 `children`
 
-找 parentNode 时，需要根据 `id` 能**尽快**找到 tree node<br>
-需要一个 map ，这样时间复杂度是 `O(1)` 。否则就需要遍历查找，时间复杂度高。
+找 parentNode 时，需要根据 `id` 能**尽快**找到 tree node。需要一个 map ，这样时间复杂度是 `O(1)` 。否则就需要遍历查找，时间复杂度高。
 
-## 实现
+## 1.3实现
 
-代码参考 convert-arr-tree.ts
+```ts
+interface IArrayItem {
+    id: number
+    name: string
+    parentId: number
+}
 
-## 扩展
+interface ITreeNode {
+    id: number
+    name: string
+    children?: ITreeNode[]
+}
 
-这两种数据结构很像 MySQL vs Mongodb ，一个关系型，一个文档型
+function convert(arr: IArrayItem[]): ITreeNode | null {
+    // 用于 id 和 treeNode 的映射
+    const idToTreeNode: Map<number, ITreeNode> = new Map()
 
-# 树转数组
+    let root = null
 
-## 题目
+    arr.forEach(item => {
+        const { id, name, parentId } = item
+
+        // 定义 tree node 并加入 map
+        const treeNode: ITreeNode = { id, name }
+        idToTreeNode.set(id, treeNode)
+
+        // 找到 parentNode 并加入到它的 children
+        const parentNode = idToTreeNode.get(parentId)
+        if (parentNode) {
+            if (parentNode.children == null) parentNode.children = []
+            parentNode.children.push(treeNode)
+        }
+
+        // 找到根节点
+        if (parentId === 0) root = treeNode
+    })
+
+    return root
+}
+
+const arr = [
+    { id: 1, name: '部门A', parentId: 0 }, // 0 代表顶级节点，无父节点
+    { id: 2, name: '部门B', parentId: 1 },
+    { id: 3, name: '部门C', parentId: 1 },
+    { id: 4, name: '部门D', parentId: 2 },
+    { id: 5, name: '部门E', parentId: 2 },
+    { id: 6, name: '部门F', parentId: 3 },
+]
+const tree = convert(arr)
+console.info(tree)
+```
+
+## 1.4扩展
+
+- 数组：像是关系型数据库，如MySQL
+- 树：像是文档型数据库，如Mongodb
+
+# 2.树转数组
+
+## 2.1题目
 
 定义一个 `convert` 函数，将以下对象转换为数组
 
@@ -84,23 +134,99 @@ const obj = {
 ]
 ```
 
-## 分析
+## 2.2分析
 
-根据顺组的顺序，需要**广度优先**遍历树
+根据数组的顺序，需要**广度优先**遍历树
 
 要快速获取 `parentId` 需要存储 `nodeToParent` map 结构。
 
-## 实现
+## 2.3实现
 
-代码参考 convert-tree-arr.ts
+- 遍历树节点（广度优先）
+- 将树节点转为Array Item，push到数组
+- 根据父子关系，找到Array Item的parentId
 
-# map parseInt
+```ts
+interface IArrayItem {
+    id: number
+    name: string
+    parentId: number
+}
 
-## 题目
+interface ITreeNode {
+    id: number
+    name: string
+    children?: ITreeNode[]
+}
+
+function convert1(root: ITreeNode): IArrayItem[] {
+    // Map
+    const nodeToParent: Map<ITreeNode, ITreeNode> = new Map()
+
+    const arr: IArrayItem[] = []
+
+    // 广度优先遍历，queue
+    const queue: ITreeNode[] = []
+    queue.unshift(root) // 根节点 入队
+
+    while (queue.length > 0) {
+        const curNode = queue.pop() // 出队
+        if (curNode == null) break
+
+        const { id, name, children = [] } = curNode
+
+        // 创建数组 item 并 push
+        const parentNode = nodeToParent.get(curNode)
+        const parentId = parentNode?.id || 0
+        const item = { id, name, parentId }
+        arr.push(item)
+
+        // 子节点入队
+        children.forEach(child => {
+            // 映射 parent
+            nodeToParent.set(child, curNode)
+            // 入队
+            queue.unshift(child)
+        })
+    }
+
+    return arr
+}
+
+const obj = {
+    id: 1,
+    name: '部门A',
+    children: [
+        {
+            id: 2,
+            name: '部门B',
+            children: [
+                { id: 4, name: '部门D' },
+                { id: 5, name: '部门E' }
+            ]
+        },
+        {
+            id: 3,
+            name: '部门C',
+            children: [
+                { id: 6, name: '部门F' }
+            ]
+        }
+    ]
+}
+const arr1 = convert1(obj)
+console.info(arr1)
+```
+
+
+
+# 3.map parseInt
+
+## 3.1题目
 
 `['1', '2', '3'].map(parseInt)` 输出什么？
 
-## parseInt
+## 3.2parseInt
 
 `parseInt(string, radix)` 解析一个字符串并返回指定基数的**十进制**整数
 
@@ -123,13 +249,13 @@ parseInt('G', 16) // NaN ，16 进制个位数最多是 F ，不存在 G
 parseInt('1F', 16) // 31 = 1*16 + F
 ```
 
-## radix == null 或者 radix === 0
+## 3.3radix == null 或者 radix === 0
 
 - 如果 `string` 以 `0x` 开头，则按照 16 进制处理，例如 `parseInt('0x1F')` 等同于 `parseInt('1F', 16)`
 - 如果 `string` 以 `0` 开头，则按照 8 进制处理 —— **ES5 之后就取消了，改为按 10 进制处理，但不是所有浏览器都这样，一定注意！！！**
 - 其他情况，按 10 进制处理
 
-## 分析代码
+## 3.4分析代码
 
 题目代码可以拆解为
 
@@ -150,25 +276,24 @@ parseInt('2', 1) // NaN ，radix === 1 非法（不在 2-36 之内）
 parseInt('3', 2) // NaN ，2 进制中没有 3
 ```
 
-## 答案
+## 3.5答案
 
 ```js
 ['1', '2', '3'].map(parseInt) // [1, NaN, NaN]
 ```
 
-## 划重点
+## 3.6划重点
 
 - 要知道 `parseInt` 参数的定义
 - 把代码拆解到最细粒度，再逐步分析
 
-## 扩展
+## 3.7扩展
 
-为何 eslint 建议 `partInt` 要指定 `radix`（第二个参数）？<br>
-因为 `parseInt('011')` 无法确定是 8 进制还是 10 进制，因此必须给出明确指示。
+为何 eslint 建议 `partInt` 要指定 `radix`（第二个参数）？因为 `parseInt('011')` 无法确定是 8 进制还是 10 进制，因此必须给出明确指示。
 
-# 原型
+# 4.原型
 
-## 题目
+## 4.1题目
 
 以下代码，执行会输出什么？
 
@@ -181,33 +306,33 @@ Foo.prototype.a = function() { console.log(3) }
 Foo.a = function() { console.log(4) }
 
 Foo.a()
-let obj = new Foo()
+let obj = new Foo()//只有执行new时，才去关注函数内部的代码
 obj.a()
 Foo.a()
 ```
 
-## 分析
+## 4.2分析
 
 把自己想象成 JS 引擎，你不是在读代码，而是在执行代码 —— 定义的函数如果不执行，就不要去看它的内容 —— 这很重要！！！
 
 按这个思路来“执行”代码
 
-## 原型
+## 4.3原型
 
 ![](img/Foo原型.png)
 
-## 答案
+## 4.4答案
 
 执行输出 `4 2 1`
 
-## 重点
+## 4.5重点
 
 - 原型基础知识
 - 你不是在读代码，而是在模拟执行代码
 
-# promise
+# 5.promise
 
-## 题目
+## 5.1题目
 
 以下代码，执行会输出什么
 
@@ -232,22 +357,21 @@ Promise.resolve().then(() => {
 })
 ```
 
-## 这道题很难
+## 5.2这道题很难
 
 网上有很多文章介绍这道题，都没有给出清晰的答案。
 
 被称为“令人失眠的”题目
 
-## 回顾
+## 5.3回顾
 
 - 单线程和异步
-- 事件循环
+- 事件循环Event Loop
 - 宏任务 微任务
 
-## then 交替执行
+## 5.4then 交替执行
 
-如果有多个 fulfilled 状态的 promise 实例，同时执行 then 链式调用，then 会交替调用<br>
-这是编译器的优化，防止一个 promise 持续占据事件
+如果有多个 fulfilled 状态的 promise 实例，同时执行 then 链式调用，则then 会交替调用执行。这是编译器的优化，防止一个 promise 持续占据事件。
 
 ```js
 Promise.resolve().then(() => {
@@ -279,9 +403,10 @@ Promise.resolve().then(() => {
 }).then(() => {
     console.log(400)
 })
+输出：1 10 100 2 20 200 3 30 300 4 40 400 
 ```
 
-## then 返回 promise 对象
+## 5.5then 返回 promise 对象
 
 当 then 返回 promise 对象时，可以认为是多出一个 promise 实例。
 
@@ -321,7 +446,7 @@ Promise.resolve().then(() => {
 // })
 ```
 
-## “慢两拍”
+## 5.6“慢两拍”
 
 then 返回 promise 实例和直接执行 `Promise.resolve()` 不一样，它需要等待两个过程
 
@@ -363,21 +488,21 @@ Promise.resolve().then(() => {
 })
 ```
 
-## 答案
+## 5.7答案
 
 题目代码输出的结果是 `1 2 3 4 5 6`
 
-## 重点
+## 5.8重点
 
 - 熟悉基础知识：事件循环 宏任务 微任务
 - then 交替执行
 - then 返回 promise 对象时“慢两拍”
 
-PS：这里一直在微任务环境下，如果加入宏任务就不一样了
+PS：这里一直在微任务环境下，如果加入宏任务就不一样了。
 
-# setState
+# 6.setState
 
-## 题目
+## 6.1题目
 
 React 中以下代码会输出什么
 
@@ -412,7 +537,7 @@ class Example extends React.Component {
 }
 ```
 
-## setState 默认异步更新
+## 6.2setState 默认异步更新
 
 ```js
 componentDidMount() {
@@ -424,7 +549,7 @@ componentDidMount() {
 }
 ```
 
-## setState 默认会合并
+## 6.3setState 默认会合并
 
 多次执行，最后 render 结果还是 `1`
 
@@ -436,7 +561,7 @@ componentDidMount() {
 }
 ```
 
-## setState 有时同步更新
+## 6.4setState 有时同步更新
 
 根据 `setState` 的**触发时机是否受 React 控制**
 
@@ -449,10 +574,19 @@ componentDidMount() {
 
 - setTimeout setInterval
 - 自定义的 DOM 事件
+
+```ts
+// 手动 DOM 事件
+document.getElementById('p1').addEventListener('click', () => {
+    this.setState({val: this.state.val + 1})
+    console.log('e----', this.state.val)
+})
+```
+
 - Promise then
 - ajax 网络请求回调
 
-## setState 有时不会合并
+## 6.5setState 有时不会合并
 
 第一，同步更新，不会合并
 
@@ -464,11 +598,11 @@ this.setState((prevState, props) => {
 })
 ```
 
-## 答案
+## 6.6答案
 
 题目代码执行打印 `0 0 2 3`
 
-## 重点
+## 6.7重点
 
 `setState` 是 React 最重要的 API ，三点：
 
@@ -476,9 +610,15 @@ this.setState((prevState, props) => {
 - 合并 vs 不合并
 - 异步更新 vs 同步更新
 
-# 对象赋值
+## 6.8setState是微任务还是宏任务
 
-## 题目
+- setState是同步执行，state都是同步更新
+- 即，在微任务promise.then开始之前，state已经计算完了
+- 同步，不是微任务或宏任务
+
+# 7.对象赋值
+
+## 7.1题目
 
 以下代码，运行会输出什么
 
@@ -491,7 +631,7 @@ console.log(a.x)
 console.log(b.x)
 ```
 
-## 值类型 vs 引用类型
+## 7.2值类型 vs 引用类型
 
 ```js
 let a = 100
@@ -503,9 +643,9 @@ let b = a
 
 ![](img/堆栈.png)
 
-## 连续赋值
+## 7.3连续赋值
 
-连续赋值是倒序执行。PS：日常工作不可用连续赋值，可读性差
+连续赋值是倒序执行（从右往左执行）。PS：日常工作不可用连续赋值，可读性差
 
 ```js
 let n1, n2
@@ -516,7 +656,7 @@ n1 = n2 = 100
 // n1 = n2
 ```
 
-## `.` 优先级更高
+## 7.4`.` 优先级更高
 
 ```js
 let a = {}
@@ -534,7 +674,7 @@ a.x = 100
 let a = { n: 1 }
 a.x = a = { n: 2 }
 
-// // 可以拆解为
+// 可以拆解为（.的优先级更高，因此先执行）
 // a.x = undefined
 // let x = a.x // x 变量是假想的，实际执行时不会有
 // x = a = { n: 2 }
@@ -557,9 +697,9 @@ a.x = a = { n: 2 }
 
 PS：日常工作不可用连续赋值，可读性差
 
-# 对象属性赋值
+# 8.对象属性赋值
 
-## 题目
+## 8.1题目
 
 执行以下代码，会输出什么
 
@@ -568,22 +708,22 @@ PS：日常工作不可用连续赋值，可读性差
 let a = {}, b = '123', c = 123
 a[b] = 'b'
 a[c] = 'c'
-console.log(a[b])
+console.log(a[b]) // c
 
 // example 2
 let a = {}, b = Symbol('123'), c = Symbol('123')
 a[b] = 'b'
 a[c] = 'c'
-console.log(a[b])
+console.log(a[b]) // b
 
 // example 3
 let a = {}, b = { key:'123' }, c = { key:'456' }
-a[b] = 'b'
-a[c] = 'c'
-console.log(a[b])
+a[b] = 'b' // '[object Object]'都是字符串
+a[c] = 'c' // '[object Object]'
+console.log(a[b]) // c
 ```
 
-## 对象的 key
+## 8.2对象的 key
 
 - 对象的键名只能是字符串和 Symbol 类型
 - 其他类型的键名会被转换成字符串类型
@@ -592,18 +732,20 @@ console.log(a[b])
 ```js
 const obj = {}
 obj[0] = 100
+
 const x = { s: 'abc' }
 obj[x] = 200
+
 const y = Symbol()
 obj[y] = 300
+
 const z = true
 obj[z] = 400
 
 Object.keys(obj) // ['0', '[object Object]', 'true']
 ```
 
-有些类数组的结构是 `{ 0: x, 1: y, 2: z, length: 3 }` ，如 `document.getElementsByTagName('div')`<br>
-实际上它的 key 是 `['0', '1', '2', 'length']`
+有些类数组的结构是 `{ 0: x, 1: y, 2: z, length: 3 }` ，如 `document.getElementsByTagName('div')`。实际上它的 key 是 `['0', '1', '2', 'length']`
 
 ## 答案
 
@@ -614,9 +756,9 @@ Object.keys(obj) // ['0', '[object Object]', 'true']
 - Map 可以用任何类型值作为 `key`
 - WeakMap 只能使用引用类型作为 `key` ，不能是值类型
 
-# 函数参数
+# 9.函数参数
 
-## 题目
+## 9.1题目
 
 运行以下代码，会输出什么
 
@@ -638,7 +780,7 @@ changeArgProp(obj)
 console.log('changeArgProp obj', obj)
 ```
 
-## 分析
+## 9.2分析
 
 调用函数，传递参数 —— **赋值**传递
 
@@ -662,15 +804,15 @@ let y = obj
 // 继续操作 x y
 ```
 
-## 解题
+## 9.3解题
 
 执行题目代码分别输出 `100  {name: '双越'}  {name: '张三'}`
 
-## 扩展：
+## 9.4扩展
 
 eslint 规则建议：函数参数当作一个 `const` 常量，不要修改函数参数 —— 这样代码更易读
 
-# 解决问题的常见思路
+# 10.解决问题的常见思路
 
 ## 举例
 
