--- a/面试/100道前端优质面试题/8.项目设计.md
+++ b/面试/100道前端优质面试题/8.项目设计.md
@@ -1,4 +1,4 @@
-# 项目负责人的职责
+# 1.项目负责人的职责
 
 注：文字小节
 
@@ -68,13 +68,13 @@
 - 跟踪进度
 - 稳定安全的运行
 
-# 前端统计 sdk
+# 2.前端统计 sdk
 
-## 题目
+## 2.1题目
 
 要让你设计一个前端统计 SDK ，你会如何设计？
 
-## 分析
+## 2.2分析
 
 前端统计的范围
 
@@ -89,7 +89,7 @@
 - 服务端接受，并处理统计数据
 - 查看统计结果
 
-## 代码结构
+## 2.3代码结构
 
 SDK 要用于多个不同的产品，所以初始化要传入 `productId`
 
@@ -133,7 +133,7 @@ class MyStatistic {
 const myStatistic = new MyStatistic('abc')
 ```
 
-## 发送数据
+## 2.4发送数据
 
 发送统计数据，用 `<img>` —— 浏览器兼容性好，没有跨域限制
 
@@ -156,7 +156,7 @@ private send(url: string, paramObj: object = {}) {
 
 如果再精细一点的优化，`send` 中可以使用 `requestIdleCallback` （兼容使用 `setTimeout`）
 
-## 自定义事件统计
+## 2.5自定义事件统计
 
 ```js
 event(key: string, value: string) {
@@ -175,7 +175,7 @@ $agreeBtn.click(() => {
 })
 ```
 
-## 访问量 PV
+## 2.6访问量 PV
 
 PV 可以通过自定义事件的方式。但是为了避免用户重复发送，需要加一个判断
 
@@ -203,7 +203,7 @@ myStatistic.pv()
 
 【注意】PV 统计需要让用户自己发送吗，能不能在 DOMContentLoaded 时自动发送？—— 最好让用户发送，因为 SPA 中切换路由也可能发送 PV
 
-## 性能统计
+## 2.7性能统计
 
 通过 `console.table( performance.timing )` 可以看到网页的各个性能
 
@@ -218,7 +218,7 @@ private initPerformance() {
 
 PS：想要得到全面的性能数据，要在网页加载完成之后（ DOMContentLoaded 或 onload ）去初始化 `myStatistic`
 
-## 错误统计
+## 2.8错误统计
 
 监听全局操作
 
@@ -319,7 +319,7 @@ webpack 通过 `devtool` 来配置 sourcemap ，有多种选择 https://webpack.
 
 只需要了解 sourcemap 的作用和配置即可，原理不用掌握。
 
-# SPA MPA
+# 3.SPA MPA
 
 ## 题目
 
@@ -418,7 +418,7 @@ module.exports = {
 我刚毕业那 2 年，对自己维护的一个系统提出了很多升级意见，都是自己从书上、竞品参考的。但领导问：这些如何实际应用到我们的项目？<br>
 我就回答不上来了。
 
-# H5 编辑器
+# 4.H5 编辑器
 
 低代码，现在流行
 
@@ -558,7 +558,7 @@ vuex getter
 
 联想到富文本编辑器的数据结构设计：text 摊平，而不是嵌套。
 
-# 何时使用 SSR
+# 5.何时使用 SSR
 
 注：文字小节
 
@@ -601,7 +601,7 @@ SSR 历史悠久，之前的 ASP JSP PHP 就是 SSR 。
 
 C 端，以阅读为主的单页面，如新闻页，运营宣传广告页面，官网等。1. 需要快；2. 需要 SEO
 
-# 权限管理
+# 6.权限管理
 
 ## 题目
 
@@ -662,7 +662,7 @@ RBAC 模型
 
 我刚毕业时，开发一个企业项目管理系统，里面会加很多大家临时想出来的功能。后来我考了 PMP ，才发现很多事情都是已经有了既定解决方案的，不需要自己创新。
 
-# hybrid 更新机制
+# 7.hybrid 更新机制
 
 ## 题目
 
@@ -698,7 +698,7 @@ hybrid 包是需要实时更新的，就跟 H5 网上上线一样。更新之后
 - hybrid 基本概念，和基本流程
 - 最新包的延迟使用
 
-# H5 抽奖页
+# 8.H5 抽奖页
 
 ## 题目
 
@@ -750,7 +750,7 @@ hybrid 包是需要实时更新的，就跟 H5 网上上线一样。更新之后
 
 能联想到的还有很多很多……
 
-# 技术选型
+# 9.技术选型
 
 ## 题目
 
@@ -804,7 +804,7 @@ hybrid 包是需要实时更新的，就跟 H5 网上上线一样。更新之后
 - 考虑团队成员的学习成本
 - 考虑它的价值是否真的被利用
 
-# 图片懒加载
+# 10.图片懒加载
 
 ## 题目
 
@@ -828,7 +828,7 @@ hybrid 包是需要实时更新的，就跟 H5 网上上线一样。更新之后
 
 代码参考 img-lazy-load.html
 
-# B 端 - C 端
+# 11.B 端 - C 端
 
 注：文字小节
 
