--- a/面试/100道前端优质面试题/8.项目设计.md
+++ b/面试/100道前端优质面试题/8.项目设计.md
@@ -754,8 +754,8 @@ hybrid 包是需要实时更新的，就跟 H5 网上上线一样。更新之后
 
 制定项目技术方案，技术选型是非常重要的一个环节。
 
-- 框架
-- JS vs TS
+- 前端框架：（vue react nuxt next或者node）
+- 语言：JS vs TS
 
 ## 误区
 
