--- a/面试/100道前端优质面试题/10.Vue面试题.md
+++ b/面试/100道前端优质面试题/10.Vue面试题.md
@@ -8,4 +8,14 @@
 
 
 
-# 3.描述vue组件生命周期()
+# 3.描述vue组件生命周期(有父子组件的情况)
+
+# 4.vue组件如何通讯
+
+# 5.描述组件渲染和更新的过程
+
+# 6.双向数据绑定v-model的实现原理
+
+
+
+# 7.基于vue设计一个购物车(组件结构，vuex state数据结构)
