--- a/面试/100道前端优质面试题/1.数据结构和算法.md
+++ b/面试/100道前端优质面试题/1.数据结构和算法.md
@@ -77,7 +77,7 @@ function fn(arr=[]){
 
 ## 2.3代码实现
 
-- 源码和性能测试:array-rotate.ts
+- 源码：
 
 ```typescript
 /**
@@ -189,7 +189,7 @@ describe('数组旋转', () => {
 })
 ```
 
-经过性能测试，知道“思路2”性能更优。看来，思路简单并不一定性能最优。
+经过性能测试，知道“思路2”性能更优。
 
 > 扩展：toEqual是判断对象或者数组的
 
