--- a/02.CSS/05.Less.md
+++ b/02.CSS/05.Less.md
@@ -2,8 +2,8 @@
 
 ## 1. less简介
 
-​	`less`是一种动态样式语言，属于css预处理器的范畴，它扩展了 CSS 语言，增加了变量、Mixin、函数等特性，使 CSS 更易维护和扩展。
-​	`Less` 既可以在客户端上运行 ，也可以借助Node.js在服务端运行。
+`less`是一种动态样式语言，属于css预处理器的范畴，它扩展了 CSS 语言，增加了变量、Mixin、函数等特性，使 CSS 更易维护和扩展。
+​`Less` 既可以在客户端上运行 ，也可以借助Node.js在服务端运行。
 
 	less的中文官网：http://lesscss.cn/
 	bootstrap中less教程：http://www.bootcss.com/p/lesscss/
@@ -31,25 +31,23 @@
 
 变量的用途：
 
-​	1.作为普通属性值来使用：直接使用`@color`——==推荐==
+1. 作为普通属性值来使用：直接使用`@color`
 
 ```less
 //声明变量color
 @color:deeppink;
-
 .inner{
-        background: @color;
-        height: 100px;
-        width: 100px;
-    }
+   background: @color;
+   height: 100px;
+   width: 100px;
+}
 ```
 
-​	2.作为选择器:`@{selector的值}`的形式——==不推荐==
+2. 作为选择器:`@{selector的值}`的形式
 
 ```less
 //声明变量selector
 @selector:#wrap;
-
 @{selector}{
     width: 300px;
     height: 400px;
@@ -57,23 +55,22 @@
 }
 ```
 
-​	3.作为属性名：`@{属性名}`的形式——==不推荐==
+3. 作为属性名：`@{属性名}`的形式
 
 ```less
 //声明变量m
 @m:margin;
-
 *{
-    @{m}: 0;
-    padding: 0;
+  @{m}: 0;
+  padding: 0;
 }
 ```
 
-​	4.作为URL：@{url}
+4. 作为URL：@{url}
 
-​	5.变量的延迟加载
+5. 变量的延迟加载
 
-​	在less中的变量是块级作用域（一个大括号代表一个作用域）
+在less中的变量是块级作用域（一个大括号代表一个作用域）
 
 ```less
 /*less文件*/
@@ -84,10 +81,10 @@
 @var: 1;
     .brass {
       @var: 2;
-      three: @var;//3  
+      three: @var;// 3  
       @var: 3;
     }
-  one: @var;  //1
+  one: @var;  // 1
 }
 
 //编译后的css文件
@@ -99,7 +96,7 @@
 }
 ```
 
-说明：等`.brass`块编译完再去解析` three: @var;`，因此结果是3
+> 说明：等`.brass`块编译完再去解析` three: @var;`，因此结果是3
 
 ## 5. less中的嵌套规则
 
@@ -132,7 +129,7 @@
 }
 ```
 
-2. &的使用：平级关系。==主要用于伪类和伪元素==
+2. &的使用：平级关系。主要用于伪类和伪元素
 
 ```less
 //平级关系使用：&
@@ -158,15 +155,15 @@
 
 ## 6. less中的混合
 
-​	混合就是将一系列属性从一个规则集引入到另一个规则集的方式
+混合就是将一系列属性从一个规则集引入到另一个规则集的方式。
 
 ### 	6.1 普通混合
 
-​	语法：以`.`号开头，后面 跟着一个变量名，然后是公共声明块
+语法：`.变量名{声明}`
 
-​	使用：直接在需要使用混合的声明块中以`.变量名;`调用
+调用：`.变量名;`
 
-​	注：此中方法编译成css时，定义的混合也会被编译到css文件中
+> 注：此种方法编译成css时，定义的混合也会被编译到css文件中。
 
 ```less
 //定义普通混合方法
@@ -214,11 +211,11 @@
 
 ### 	6.2 不带输出的混合
 
-​			语法：`.变量名(){声明}`
+语法：`.变量名(){声明}`
 
-​			调用：`.变量名;`
+调用：`.变量名;`
 
-​			==注==：此中方法编译成css时，定义的混合`不会`被编译到css文件中	
+> 注：此中方法编译成css时，定义的混合`不会`被编译到css文件中	
 
 ```less
 //定义不带输出的混合
@@ -260,7 +257,9 @@
 
 ### 	6.3 带输出（参数)的混合
 
-​	==注==：
+语法：`.变量名(形参1,形参2,形参3,...){声明}`
+
+调用：`.变量名(实参1,实参2,实参3,...);`
 
 1. 混合`不会`被编译到css文件中
 2. 传递的实参必须与定义混合的形参相对应
@@ -289,7 +288,7 @@
 
 ### 	6.4 带参数并且有默认值的混合
 
-注：如果调用时没传递参数，则会使用定义混合时的默认值
+如果调用时没传递参数，则会使用定义混合时的默认值
 
 ```less
 .juzhong(@w:10px,@h:10px,@c:pink){
@@ -318,7 +317,7 @@
 
 ### 	6.6 命名参数
 
-​	用途：当传入的实参与定义的形参个数不一样时，可以通过命名参数指定传入的实参是给哪个形参的
+用途：当传入的实参与定义的形参个数不一样时，可以通过命名参数指定传入的实参是给哪个形参的
 
 ```less
 .juzhong(@w:10px,@h:10px,@c:pink){
@@ -403,7 +402,7 @@
 
 ## 7. less运算
 
-​	在less中可以进行加减乘除的运算
+在less中可以进行加减乘除的运算
 
 ```less
 //less文件
@@ -438,7 +437,7 @@
 
 特点：性能比混合高但灵活度比混合低
 
-==注==：继承不能带参数
+> 注：继承不能带参数
 
 ```less
 /*******************定义继承***********/
